--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,13 @@
+@import 'tailwindcss/base';
+
+@import 'tailwindcss/components';
+
+@import 'tailwindcss/utilities';
+@import 'tailwindcss/base';
+
+@import 'tailwindcss/components';
+
+@import 'tailwindcss/utilities';
 /*
  * App Global CSS
  * ----------------------------------------------------------------------------
@@ -18,12 +28,20 @@
 @import "@ionic/angular/css/typography.css";
 @import "@ionic/angular/css/display.css";
 
+
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
 /* Optional CSS utils that can be commented out */
-@import "@ionic/angular/css/padding.css";
-@import "@ionic/angular/css/float-elements.css";
-@import "@ionic/angular/css/text-alignment.css";
-@import "@ionic/angular/css/text-transformation.css";
-@import "@ionic/angular/css/flex-utils.css";
+/* Optional CSS utils that can be commented out */
+/* @import "@ionic/angular/css/padding.css"; */
+/* @import "@ionic/angular/css/float-elements.css"; */
+/* @import "@ionic/angular/css/text-alignment.css"; */
+/* @import "@ionic/angular/css/text-transformation.css"; */
+/* @import "@ionic/angular/css/flex-utils.css"; */
 
 /**
  * Ionic Dark Mode
