added carrito page and authServiceConfig(reparing)

--- a/src/app/features/Components/button/button.component.html
+++ b/src/app/features/Components/button/button.component.html
@@ -1,13 +1,6 @@
 
 
-<div class="BotonIniciar">
-  <button class="custom-button">
-    <label class="div-labelIniciar">Iniciar Sesion</label>
-  </button>
-</div>
 
-<div class="BotonR">
-  <button class="custom-button">
-    <label class="div-labelRegistrar">Registrarse</label>
-  </button>
+<div>
+
 </div>
