--- a/src/app/features/Components/textbox-1/textbox-1.component.scss
+++ b/src/app/features/Components/textbox-1/textbox-1.component.scss
@@ -4,22 +4,21 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh; 
+  height: 100vh;
 }
 
 .textbox {
-  box-sizing: border-box;
-  size: 16px ;
-  width: 100%; 
-  height: 40px;
+
+  height: 5vh;
+  width: 20rem;
   border-width: 1px 1px 3px 3px;
   border-style: solid;
   border-color: #000000;
   color: #000000;
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
-  font-weight: bold; 
-  margin-bottom: 20px; 
+  font-weight: bold;
+
 }
 
 
