added function register and login

--- a/src/app/features/Components/textbox-1/textbox-1.component.html
+++ b/src/app/features/Components/textbox-1/textbox-1.component.html
@@ -1,2 +1,2 @@
-<input class="textbox mb-5 text-2xl" type="text" [value]="textValue"
+<input class="textbox mb-5 text-2xl"  [value]="textValue"
        (input)="onInputChange($event.target.value)" />
