--- a/src/app/features/loggin/loggin.page.scss
+++ b/src/app/features/loggin/loggin.page.scss
@@ -1,6 +1,6 @@
 
 ion-content {
-    background-color: #252422;
+    --background: #252422;
 }
 .registerRedirect{
     border-radius: 10px;
@@ -18,4 +18,16 @@ ion-content {
 .loginButton{
     border-radius: 20px 0px 0px 20px;
     background: #000;
+}
+
+.loginTextBox{
+  border-radius: 10px;
+  border-top: 1px solid #FFF;
+  border-right: 1px solid #FFF;
+  border-bottom: 3px solid #FFF;
+  border-left: 3px solid #FFF;
+  background: rgba(217, 217, 217, 0.00);
+  width: 270px;
+  height: 40px;
+  margin: 0;
 }
