--- a/src/app/features/registrar/registrar.page.html
+++ b/src/app/features/registrar/registrar.page.html
@@ -50,7 +50,7 @@
         </form>
       </div>
 
-      <button class="bg-black rounded-r-full py-4 px-16 mb-6" type="submit" (click)="onSubmit()">
+      <button class="bg-black rounded-r-full py-4 px-16 mb-6"  (click)="onSubmit()">
         <label class="font-inter font-bold text-white text-2xl">Registrarse</label>
       </button>
     </div>
