--- a/src/app/features/item-upload/item-upload.page.html
+++ b/src/app/features/item-upload/item-upload.page.html
@@ -67,10 +67,10 @@
           id="tag"
           class="bg-white font-inter font-semibold text-anaranjado text-xl border-b-4 border-b-anaranjado border-r-4 border-r-anaranjado rounded-xl w-80"
         >
-          <option value="tag1">Tag 1</option>
-          <option value="tag2">Tag 2</option>
-          <option value="tag3">Tag 3</option>
-          <option value="tag4">Tag 4</option>
+          <option value="PLAYSTATION">PLAYSTATION</option>
+          <option value="XBOX">XBOX</option>
+          <option value="PC">PC</option>
+          <option value="NINTENDO">NINTENDO</option>
         </select>
       </div>
     </div>
