register and get keys complete

--- a/src/app/features/inicio/inicio.page.html
+++ b/src/app/features/inicio/inicio.page.html
@@ -3,22 +3,17 @@
     <app-header></app-header>
   </div>
   <div class="flex gap-3 justify-center my-5">
-    <button class="py-3 px-4  bg-anaranjado rounded-3xl">
-      <img src="../../../assets/Vector.svg" alt="filtro">
+    <button class="py-3 px-4 bg-anaranjado rounded-3xl">
+      <img src="../../../assets/Vector.svg" alt="filtro" />
     </button>
     <button class="py-3 px-5 bg-anaranjado rounded-3xl">
-      <img src="../../../assets/dollar.svg" alt="">
+      <img src="../../../assets/dollar.svg" alt="" />
     </button>
-   <app-orange-button>Registrar Key</app-orange-button>
-   
-   <app-orange-button>Ver Carrito</app-orange-button>
+    <app-orange-button>Registrar Key</app-orange-button>
 
+    <app-orange-button>Ver Carrito</app-orange-button>
   </div>
   <div>
     <app-key-card></app-key-card>
-    <app-key-card></app-key-card>
-    <app-key-card></app-key-card>
-    <app-key-card></app-key-card>
   </div>
-  
 </ion-content>
