--- a/src/app/features/item-upload/item-upload.page.html
+++ b/src/app/features/item-upload/item-upload.page.html
@@ -36,6 +36,7 @@
       <input
         type="text"
         class="bg-white font-inter font-semibold text-anaranjado text-xl border-b-4 border-b-anaranjado border-r-4 border-r-anaranjado rounded-xl w-80"
+        [(ngModel)]="nombre"
       />
     </div>
   </div>
@@ -53,6 +54,7 @@
         class="bg-white font-inter font-semibold text-anaranjado text-xl border-b-4 border-b-anaranjado border-r-4 border-r-anaranjado rounded-xl w-80"
         rows="7"
         style="resize: none"
+        [(ngModel)]="descripcion"
       >
       </textarea>
     </div>
@@ -66,6 +68,7 @@
           name="tag"
           id="tag"
           class="bg-white font-inter font-semibold text-anaranjado text-xl border-b-4 border-b-anaranjado border-r-4 border-r-anaranjado rounded-xl w-80"
+          [(ngModel)]="tags"
         >
           <option value="PLAYSTATION">PLAYSTATION</option>
           <option value="XBOX">XBOX</option>
@@ -82,10 +85,12 @@
           Estudio Desarrollador
         </h1>
       </div>
+
       <div class="mt-10 flex justify-end mr-5">
         <input
           type="text"
           class="bg-white font-inter font-semibold text-anaranjado text-xl border-b-4 border-b-anaranjado border-r-4 border-r-anaranjado rounded-xl w-80"
+          [(ngModel)]="developer"
         />
       </div>
     </div>
@@ -100,6 +105,7 @@
         <input
           type="text"
           class="bg-white font-inter font-semibold text-anaranjado text-xl border-b-4 border-b-anaranjado border-r-4 border-r-anaranjado rounded-xl w-80"
+          [(ngModel)]="precio"
         />
       </div>
     </div>
@@ -112,6 +118,7 @@
         <input
           type="text"
           class="bg-white font-inter font-semibold text-anaranjado text-xl border-b-4 border-b-anaranjado border-r-4 border-r-anaranjado rounded-xl w-80"
+          [(ngModel)]="clave"
         />
       </div>
     </div>
@@ -131,11 +138,13 @@
           class="bg-white font-inter font-semibold text-anaranjado text-lg border-b-4 border-b-anaranjado border-r-4 border-r-anaranjado rounded-xl w-80"
           id="file_input"
           type="file"
+          [(ngModel)]="imagen"
         />
       </div>
       <div class="mt-5 flex justify-center">
         <button
           class="bg-white font font-bold text-black text-3xl rounded-2xl py-3 px-10 mt-5 mb-5"
+          (click)="UploadKey()"
         >
           Registrar Clave
         </button>
