--- a/src/app/features/item-upload/item-upload.page.html
+++ b/src/app/features/item-upload/item-upload.page.html
@@ -126,7 +126,7 @@
     <div class="mt-10">
       <div class="bg-anaranjado rounded-r-[20px] py-3 mr-28">
         <h1 class="font-inter font-semibold text-white text-2xl ml-5">
-          Imagen
+          URL imagen
         </h1>
       </div>
       <div class="mt-10 flex justify-end mr-5">
@@ -136,8 +136,7 @@
         ></label>
         <input
           class="bg-white font-inter font-semibold text-anaranjado text-lg border-b-4 border-b-anaranjado border-r-4 border-r-anaranjado rounded-xl w-80"
-          id="file_input"
-          type="file"
+          type="text"
           [(ngModel)]="imagen"
         />
       </div>
