--- a/src/app/features/metodopago/metodopago.page.html
+++ b/src/app/features/metodopago/metodopago.page.html
@@ -1,6 +1,6 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>metodopago</ion-title>
+    <ion-title>Metodo de Pago</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -12,49 +12,53 @@
   </ion-header>
 
   <div class="payment-container">
-    <div class="payment-header" [ngClass]="{'active': isHeaderClicked1}" (click)="togglePaymentForm1()">
-      <h2 style="color: #ffffff;">Tarjeta de crédito o débito</h2>
+    <div class="payment-header">
+      <h2 style="color: #ffffff">Tarjeta de crédito o débito</h2>
     </div>
-    <div class="payment-form" *ngIf="showForm1 && isHeaderClicked1">
+    <div class="payment-form">
       <div class="form-row">
         <ion-label>Número de tarjeta</ion-label>
-        <ion-input type="text" (input)="cardNumber"></ion-input>
+        <input
+          type="text"
+          class="rounded-2xl font-inter font-medium text-anaranjado text-lg"
+          [(ngModel)]="numTarjeta"
+        />
       </div>
+
       <div class="form-row">
         <ion-label>Fecha de expiración</ion-label>
-        <ion-input type="text" (input)="expirationDate"></ion-input>
+        <input
+          type="text"
+          class="rounded-2xl font-inter font-medium text-anaranjado text-lg"
+          [(ngModel)]="fechaExpiracion"
+        />
       </div>
       <div class="form-row">
         <ion-label>CVV</ion-label>
-        <ion-input type="password" (input)="cvv"></ion-input>
+        <input
+          type="password"
+          class="rounded-2xl font-inter font-medium text-anaranjado text-lg"
+          [(ngModel)]="cvv"
+        />
       </div>
       <div class="form-row">
         <ion-label>Titular de la tarjeta</ion-label>
-        <ion-input type="text" (input)="cardHolder"></ion-input>
+        <input
+          type="text"
+          class="rounded-2xl font-inter font-medium text-anaranjado text-lg"
+          [(ngModel)]="propietario"
+        />
       </div>
       <div class="button-container">
-        <ion-button class="confirm-button" color="#EB5E28" (click)="confirmPayment1()">Confirmar</ion-button>
+        <ion-button
+          class="confirm-button"
+          color="primary"
+          (click)="confirmPayment()"
+          >Confirmar</ion-button
+        >
       </div>
     </div>
   </div>
 
-  <div class="payment-container">
-    <div class="payment-header" [ngClass]="{'active': isHeaderClicked2}" (click)="togglePaymentForm2()">
-      <h2 style="color: #ffffff;">Paypal</h2>
-    </div>
-    <div class="payment-form" *ngIf="showForm2 && isHeaderClicked2">
-      <div class="form-row">
-        <ion-label>Email</ion-label>
-        <ion-input type="email" (input)="paypalEmail"></ion-input>
-      </div>
-      <div class="form-row">
-        <ion-label>Contraseña</ion-label>
-        <ion-input type="password" (input)="paypalPassword"></ion-input>
-      </div>
-      <div class="button-container">
-        <ion-button class="confirm-button" color="#EB5E28" (click)="confirmPayment2()">Confirmar</ion-button>
-      </div>
-    </div>
-  </div>
-  <button class="back-button">Atrás</button>
+  <button class="back-button" [routerLink]="['/carrito']">Atrás</button>
 </ion-content>
